k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-app-service
  namespace: eks-demo-app
  labels:
    app: eks-demo-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: eks-demo-app
  sessionAffinity: None
